# nomad-distro-template-oasis

./: README.md  docker-compose.override.yml  docker-compose.yaml  pyproject.toml
configs/: nomad.yaml
